--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,11 +30,7 @@ pipeline {
           }
       }
       stage('Build & Push Docker Image') {
-        agent {
-          docker {
-            image 'docker'
-          }
-        }
+        agent any
         environment {
           DOCKER_IMAGE = "ashudhub/sbdapp:${BUILD_NUMBER}"
           // DOCKERFILE_LOCATION = "Dockerfile"
