--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
           script {
             sh 'docker build -t ${DOCKER_IMAGE} .'
             def dockerImage = docker.image("${DOCKER_IMAGE}")
-            docker.withRegistry('https://hub.docker.com/', 'docker') {
+            docker.withRegistry('https://index.docker.io/v1/', 'docker') {
               dockerImage.push()
             }
           }
