--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: sbdapp
-        image: ashudhub/sbdapp
+        image: ashudhub/sbdapp:latest
         ports:
         - containerPort: 8080
