--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,7 @@ pipeline {
       stage('Build & Push Docker Image') {
         agent any
         environment {
-          DOCKER_IMAGE = "ashudhub/sbdapp:latest"
+          DOCKER_IMAGE = "ashudhub/sbdapp:${BUILD_NUMBER}"
           // DOCKERFILE_LOCATION = "Dockerfile"
           REGISTRY_CREDENTIALS = credentials('docker')
           HOME = "${env.WORKSPACE}"
